Fixed the ice6.css so the way of aligning text doesn't suck entirely.

--- a/ice/styles/ice6.css
+++ b/ice/styles/ice6.css
@@ -5,28 +5,23 @@ div{
     display:grid;
     grid-template-columns: 1fr 1fr;
     background-color: rgb(227, 227, 227);
-    position: relative;
 }
 .cherries{
     grid-column: 1/2;
+    grid-row: 1/3;
     background-color: white;
-    position: relative;
 }
 h1{
     grid-column: 1/3;
+    grid-row: 1/2;
     color:black;
     font-size: 200px;
     text-align: center;
-    position: absolute;
-    top: 20px;
-    left: 150px;
 }
 h2{
     grid-column: 2/3;
+    grid-row: 2/3;
     color:red;
     font-size: 75px;
     text-align: center;
-    position: absolute;
-    right:300px;
-    bottom:20px;
 }
